@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.48 2005/01/19 21:55:09 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.49 2005/01/22 00:38:37 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  21 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
+  partition() now waits until after it checks for partition flags before delete
+  the partitions :P
 
   19 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Updated TODO. swapon failure it temporarily not an error. swapon is an error
